# jpelectricdata

./: .gitignore  README.md  hello.py  index.html  pyproject.toml  ruff.toml  run_server.sh  setup.sh
app/: app.ini  app.py  datareader.py
app/pages/: balance.py  common.py  download.py  home.py  publishapiurl.py  trend.py
docs/: requirements.txt
etc/: jpelectric_dashboard.service  jpelectric_dashboard_uwsgi.service  uwsgi.conf
notebook/: scraping_electricity.ipynb
sql/: create_detail_demand_supply.sql  create_spot_price.sql
src/: detail_demand_supply_master.yml  electric_analysis.py  get_jepx.sh  run.sh  scraping_electricity.py  scraping_jepx.py  send_to_bluesky.py
