[project]
name = "jpelectricdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.59",
    "dash>=2.9.3",
    "dash-bootstrap-components>=1.7.1",
    "flask>=3.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "pyuwsgi>=2.0.28.post1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "selenium>=4.29.0",
]


[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "B905"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.

[tool.ruff.isort]
combine-as-imports = true
section-order = ["future", "standard-library", 
    "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
